--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,11 +11,7 @@ html(lang='tw')
 			a#brand(href='/')= title
 			nav#siteNav
 				ul
-					li test
-					li tab
 			form#searchBar
-				input(placeholder='搜尋')
-				input(type='submit')
 		section
 			block content
-		footer footer
+		footer &nbsp;
