Show UpdateDate in HTML footer

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,4 +14,6 @@ html(lang='tw')
 			form#searchBar
 		section
 			block content
-		footer &nbsp;
+		footer 
+			if lawUpdate
+				span 法規資料庫更新日期： #{lawUpdate}
