--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,6 +13,7 @@ body {
 body > header {
 	background-color: #ccc;
 	color: #000;
+	padding: .2em;
 }
 body > header > * {
 	float: left;
@@ -24,7 +25,11 @@ body > header a {
 #brand {
 	font-size: xx-large;
 	font-weight: bold;
-	margin: .5em 1em;
+	margin: .2em 1em;
+}
+#lawUpdate {
+	float: right;
+	font-size: small;
 }
 #siteNav {
 	margin: 1em 1em .5em 4em;
@@ -57,6 +62,7 @@ body > header a {
 	top: 0;
 }
 
+
 /**
  * Content
  */
@@ -75,16 +81,35 @@ h6 { font-size: 120%; }
 .dlTable > dl > dd {
 	padding: .3em;
 }
+.date { font-family: monospace; }
+.noMarker { list-style-type: none; }
 
 a { color: inherit; }
 a:hover { text-decoration: none; }
 
 nav .inlineList li {
 	padding: .2em .5em;
-	border-right: 1px solid #ccc;
+	border-right: 1px solid #fff;
 }
 nav .inlineList li:last-of-type {
 	border-right: none;
+}
+
+.discard {
+	background: url(http://law.moj.gov.tw/images/flag/Fei.gif) top left no-repeat;
+	padding-left: 16px;
+}
+
+.lawInfo {
+	padding: .2em;
+	margin: .3em 0 1em 0;
+	border-left: 3px solid #888;
+}
+.lawCategory {
+	font-size: small;
+}
+.lawName {
+	font-weight: bold;
 }
 
 .chapter {
@@ -98,7 +123,6 @@ nav .inlineList li:last-of-type {
 	padding-top: .5em;
 	border-top: 1px solid #ccc;
 }
-
 
 
 /**
