--- a/views/law.jade
+++ b/views/law.jade
@@ -23,9 +23,12 @@ block content
 			dl
 				dt 狀態
 				dd 已廢止
+
 	.chapter: a(name='沿革內容') 沿革內容
-	.rawdata= law.沿革內容
-	
+	ol
+		each amend in law.沿革內容
+			li= amend
+
 	h2: a(name='法規內容') 法規內容
 	if law.前言
 		.artTitle: a(name='前言') 前言
