--- a/views/law.jade
+++ b/views/law.jade
@@ -22,10 +22,10 @@ block content
 		if law.廢止註記
 			dl
 				dt 狀態
-				dd 已廢止
+				dd.em 已廢止
 
-	.chapter: a(name='沿革內容') 沿革內容
-	ol
+	.chapter: a(name='沿革') 沿革
+	ol.history
 		each amend in law.沿革內容
 			li= amend
 
