--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -76,8 +76,9 @@ h4 { font-size: 140%; }
 h5 { font-size: 130%; }
 h6 { font-size: 120%; }
 ol { padding-left: 40px; }
-a { color: inherit; text-decoration: none; }
-a:hover { text-decoration: underline; }
+p { margin-top: .2em; margin-bottom: 1em; line-height: 175%; }
+a[href] { color: inherit; text-decoration: none; }
+a[href]:hover { text-decoration: underline; }
 
 .dlTable > dl > dt { font-weight: bold; }
 .tableCell,
