Add JYI list and API

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -76,7 +76,7 @@ h4 { font-size: 140%; }
 h5 { font-size: 130%; }
 h6 { font-size: 120%; }
 ol { padding-left: 40px; }
-p { margin-top: .2em; margin-bottom: 1em; line-height: 175%; }
+p { margin-top: .2em; margin-bottom: .5em; line-height: 175%; }
 a[href] { color: inherit; text-decoration: none; }
 a[href]:hover { text-decoration: underline; }
 
