--- a/views/index.jade
+++ b/views/index.jade
@@ -1,15 +1,4 @@
 extends layout
 
 block content
-	if latest
-		section
-			h1 最新異動法規
-			ul.lawList
-				each law in latest
-					li.lawInfo(class=law.廢止註記 ? 'discard' : '')
-						.lawCategory(title='類別')= law.法規類別
-						.lawName
-							a(href='/law/'+law.PCode)= law.法規名稱
-						.history
-							span(title='異動次數') [#{law.沿革內容.length}]
-							span(title='最新異動說明')= law.沿革內容[law.沿革內容.length - 1]
+	h1 不知道要放甚麼的首頁
