--- a/views/jyi.jade
+++ b/views/jyi.jade
@@ -5,6 +5,7 @@ block content
 		h1= config.pageTitle
 		em= jyi.title
 	nav: ul.inlineList
+		li: a(href='/api/jyi/'+jyi.number, download=jyi.number+'.json') JSON
 		li: a(href='http://www.judicial.gov.tw/constitutionalcourt/p03_01.asp?expno='+jyi.number, target='_blank') 司法院網站
 	.dlTable
 		dl
