use app.locals and res.locals

--- a/views/law.jade
+++ b/views/law.jade
@@ -4,14 +4,14 @@ extends layout
 mixin articleContent(content)
 	if content.texts
 		each para in content.texts
-			p(class=(counter++ % 2) ? 'odd' : 'even')= para
+			p= para
 	if content.children
 		ol(class={article: content.stratum === undefined})
 			each child in content.children
 				li: +articleContent(child)
 	if content.posttexts
 		each para in content.posttexts
-			p(class=(counter++ % 2) ? 'odd' : 'even')= para
+			p= para
 
 block content
 	h1(class=law.廢止註記 ? 'discard' : '')= law.法規名稱
