--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html(lang='tw')
 	head
 		meta(charset='utf-8')
 		meta(name='viewport', content='width=device-width, initial-scale=1')
-		title= config.pageTitle||config.siteName
+		title= pageTitle
 		link(rel='stylesheet', href='/stylesheets/std.css')
 		link(rel='stylesheet', href='/stylesheets/main.css')
 	body
