--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -100,6 +100,17 @@ nav .inlineList li:last-of-type {
 .discard { color: #bbb; }
 .discard:hover { color: inherit; }
 
+.toc {
+	float: right;
+	border: 1px solid #888;
+	background-color: #000;
+	padding: .5em;
+}
+.toc div {
+	padding-right: 2em;
+	margin-right: 2em;
+}
+
 .history {
 	font-size: small;
 	font-family: monospace;
@@ -129,14 +140,22 @@ nav .inlineList li:last-of-type {
 	padding: .1em 1em;
 }
 
-.編, .章, .節, .款, .目 {
+
+.編 {padding-left: 0.2em; }
+.章 {padding-left: 1.2em; }
+.節 {padding-left: 2.2em; }
+.款 {padding-left: 3.2em; }
+.目 {padding-left: 4.2em; }
+
+
+.lawContent .ordinal:not(.條) {
 	background-color: #444;
 }
-.編 {font-size: 175%; text-indent: 0em; }
-.章 {font-size: 150%; text-indent: 1em; }
-.節 {font-size: 140%; text-indent: 2em; }
-.款 {font-size: 130%; text-indent: 3em; }
-.目 {font-size: 120%; text-indent: 4em; }
+.lawContent .編 {font-size: 175%;}
+.lawContent .章 {font-size: 150%;}
+.lawContent .節 {font-size: 140%;}
+.lawContent .款 {font-size: 130%;}
+.lawContent .目 {font-size: 120%;}
 
 .條 {
 	border-top: 1px solid #888;
