--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,12 +1,14 @@
 doctype html
-html(lang='tw')
+html(lang='tw', ng-app='twLawApp')
 	head
 		meta(charset='utf-8')
 		meta(name='viewport', content='width=device-width, initial-scale=1')
 		title= pageTitle
 		script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js')
-		link(rel='stylesheet', href='/stylesheets/std.css')
-		link(rel='stylesheet', href='/stylesheets/main.css')
+		script(src='/js/angular/app.js')
+		script(src='/js/angular/controllers.js')
+		link(rel='stylesheet', href='/css/std.css')
+		link(rel='stylesheet', href='/css/main.css')
 	body
 		header
 			a#brand(href='/')= siteName
@@ -17,7 +19,7 @@ html(lang='tw')
 			form#searchBar(action='/search')
 				input(type='text', name='q')
 				input(type='submit', value='查詢')
-		section
+		section(ng-controller=ngController)
 			block content
 		footer
 			if visitCounter
