--- a/public/css/main.css
+++ b/public/css/main.css
@@ -100,6 +100,8 @@ nav .inlineList li:last-of-type {
 .discard { color: #bbb; }
 .discard:hover { color: inherit; }
 
+.inlineList > li { padding: 0 .3em; }
+
 .toc {
 	float: right;
 	border: 1px solid #888;
